fixed the layout issues

--- a/doctrines/style.css
+++ b/doctrines/style.css
@@ -8,12 +8,6 @@ header {
     padding: 10px;
     margin: 20px;
 }
-.header-text-cont{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    max-width: 50%;
-}
 .header-text-cont > p, .header-text-cont > h1{
     color: white;
 }
