--- a/gallery/style.css
+++ b/gallery/style.css
@@ -10,12 +10,6 @@ header {
     padding: 10px;
     margin: 20px;
 }
-.header-text-cont{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    max-width: 50%;
-}
 .header-text-cont > p, .header-text-cont > h1{
     color: white;
 }
