--- a/programs/style.css
+++ b/programs/style.css
@@ -6,12 +6,6 @@ header {
     padding: 10px;
     margin: 20px;
 }
-.header-text-cont{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    max-width: 50%;
-}
 .header-img-cont{
     width: 60%;
 }
